# python-project-52

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  requirements.txt  ruff.toml  sonar-project.properties  unittest_parametrize.py
.github/workflows/: ci.yml
task_manager/: admin.py  config.py  filters.py  forms.py  models.py  settings.py  urls.py  views.py
task_manager/apps/core/: apps.py  middleware.py  mixins.py  tests.py  tests_config.py  urls.py
task_manager/apps/labels/: apps.py  forms.py  tests.py  urls.py
task_manager/apps/statuses/: apps.py  forms.py  tests.py  urls.py
task_manager/apps/tasks/: forms.py  tests.py
task_manager/apps/users/: admin.py  apps.py  forms.py  models.py  tests.py  views.py
task_manager/migrations/: 0001_initial.py  0002_task.py  0003_label.py  0004_task_labels.py
task_manager/templates/core/: base.html  base_delete_form.html  base_form.html  login.html  main.html  navbar.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/tests/: test_labels_crud.py  test_statuses_crud.py  test_tasks_crud.py  test_tasks_filter.py  test_users_crud.py
templates/: base.html  index.html
templates/labels/: create.html  delete.html  list.html  update.html
templates/statuses/: create.html  delete.html  list.html  update.html
templates/tasks/: create.html  delete.html  detail.html  list.html  update.html
templates/users/: create.html  delete.html  index.html  list.html  login.html  update.html
