[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=2.2",
    "django>=5.2.6",
    "django-bootstrap5>=24.3",
    "gunicorn>=21.2",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "ruff>=0.13.1",
    "whitenoise>=6.7",
]
